Added margin spacing between photo-carousel items. This required a small css workaround in carousel-item positioning in order to properly trigger the IntersectionObserver in app-carousel.

--- a/carousel/carousel-item.html
+++ b/carousel/carousel-item.html
@@ -2,12 +2,27 @@
 <style>
 
   :host {
-    display:         	flex;
-    justify-content: 	center;
-    align-items:     	center;   
-    height:          	100%;
-    overflow:        	hidden;
-    background-color: inherit;
+    display:         flex;
+    justify-content: center;
+    align-items:     center;   
+    height:          100%;
+
+    /*
+      These position styles work around app-carousel's 
+      underlying IntersectionObserver calculations.
+
+      The negative left counteracts how adding margin
+      gives a 4px offset to the element when it is
+      first measured by the observer.
+
+      Thankfully, the carousel's scroll-snap ensures 
+      that the -4px positioning does not affect how 
+      the element is ultimately positioned. 
+    */
+    position: relative;
+    left:    -4px;
+    margin:   0px 4px;
+    overflow: hidden;
   }
 
   .item {
@@ -21,7 +36,7 @@
 
   lazy-image,
   lazy-video {
-  	background-color: inherit;
+    background-color: black;
   }
 
 </style>
