--- a/carousel/photo-carousel.html
+++ b/carousel/photo-carousel.html
@@ -148,7 +148,7 @@
                         start="[[_start]]"
                         opened="[[_opened]]"
                         on-carousel-ready="__carouselReady"
-                        on-current-item-changed="__currentItemChanged"
+                        on-centered-item-changed="__centeredItemChanged"
                         on-photo-selected="__photoSelected">
     </paginated-carousel>
 
