Initial work on a fullscreen photo-viewer element. This version includes entry and exits but does not yet include pinch to zoom. More tweaks and fine tuning of photo carousel. Updated deps.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -68,6 +68,11 @@
 </photo-carousel>
 
 
+<photo-viewer id="viewer"
+              item="[[_liveItem]]">
+</photo-viewer>
+
+
 <image-editor id="imageEditor"
               item="[[_liveItem]]"
               list="[[list]]">
