--- a/carousel/paginated-carousel.html
+++ b/carousel/paginated-carousel.html
@@ -62,8 +62,7 @@
       <carousel-item class="before-item"
                      index="[[index]]"
                      item="[[item]]"
-                     reverse
-                     on-click="__itemClicked">
+                     reverse>
       </carousel-item>
 
     </template>
@@ -78,8 +77,7 @@
               on-dom-change="__afterDomChanged">
 
       <carousel-item class="after-item"
-                     item="[[item]]"
-                     on-click="__itemClicked">
+                     item="[[item]]">
       </carousel-item>
 
     </template>
