Cleaned up a few amination bugs with the carousel. Fixed the carousel jumping on exit. Created a workaround for shifting lazy loaded elements that come before the starging element in the carousel which is more stable on iOS Safari.

--- a/carousel/carousel-item.html
+++ b/carousel/carousel-item.html
@@ -49,7 +49,7 @@
               placeholder="[[_imgPlaceholder]]"
               src="[[_imgSrc]]"
               sizing="contain"
-              trigger="6"
+              trigger="[[_trigger]]"
               on-click="__imgClicked">
   </lazy-image>  
 </template>
