--- a/carousel/photo-carousel.html
+++ b/carousel/photo-carousel.html
@@ -23,6 +23,13 @@
   }
 
   #overlay {
+
+    /*
+      Addresses the carousel jumping up suddenly on exit.
+    */
+    padding:       0px;
+    margin-bottom: 128px;
+
     box-shadow: none;
     --overlay-background-color:                   transparent;
     --overlay-toolbar-background-parallax-height: 100%;
