--- a/viewer/photo-viewer.html
+++ b/viewer/photo-viewer.html
@@ -6,26 +6,27 @@
   }
 
   #overlay {
-    box-shadow: 			none;
+    box-shadow:       none;
     background-color: transparent;
-    z-index: 					1;
+    z-index:          1;
   }
 
-  #content {
-  	height: 100%;
+  #content
+  pinch-to-zoom {
+    height: 100%;
   }
 
   lazy-image {
-  	height: 					100%;  	
-    background-color: transparent;
-    opacity: 					0;
+    height:           100%;   
+    background-color: black;
+    opacity:          0;
   }
 
   paper-icon-button {
-  	position: absolute;
-  	top: 			16px;
-  	left: 		16px;
-  	color: 		var(--constant-light-text);
+    position: absolute;
+    top:      16px;
+    left:     16px;
+    color:    var(--constant-light-text);
   }
 
 </style>
@@ -40,25 +41,29 @@
 
 
 <app-overlay id="overlay"
-						 modal
+             modal
              prebuilt-animation="from-left"
              on-overlay-reset="__reset">
 
   <div id="content">
+
+    <pinch-to-zoom>
     
-    <lazy-image id="img"
-    						alt="[[item.displayName]]"
-    						orientation="[[_orientation]]" 
-    						placeholder="[[_placeholder]]" 
-    						sizing="cover" 
-    						src="[[_src]]"
-    						on-lazy-image-loaded-changed="__loadedChanged">
-    </lazy-image>
+      <lazy-image id="img"
+                  alt="[[item.displayName]]"
+                  orientation="[[_orientation]]" 
+                  placeholder="[[_placeholder]]" 
+                  sizing="cover" 
+                  src="[[_src]]"
+                  on-lazy-image-loaded-changed="__loadedChanged">
+      </lazy-image>
+
+    </pinch-to-zoom>
 
 
     <paper-icon-button icon="app-icons:arrow-back"
-    									 on-click="__backBtnClicked">
-   	</paper-icon-button>
+                       on-click="__backBtnClicked">
+    </paper-icon-button>
 
   </div>
 
