Measurement corrections for rotated images. Trying a new version of image processing cloud functions that may solve a new issue with Safari now defaulting to using the image file metadata to correct rotation with no way to opt out of this behavior. ImageMagic may have an option flag called -auto-orient that could help resolve thia issue.

--- a/viewer/photo-viewer.html
+++ b/viewer/photo-viewer.html
@@ -11,9 +11,16 @@
     z-index:          1;
   }
 
-  #content
-  pinch-to-zoom {
-    height: 100%;
+  #content {   
+    display:         flex;
+    justify-content: center;
+    align-items:     center;
+    height:          100%;
+    overflow:        hidden;
+  }
+
+  pinch-to-zoom { 
+    min-height: 100%;
   }
 
   lazy-image {
@@ -47,15 +54,14 @@
 
   <div id="content">
 
-    <pinch-to-zoom>
-    
+    <pinch-to-zoom id="zoom">
+
       <lazy-image id="img"
                   alt="[[item.displayName]]"
                   orientation="[[_orientation]]" 
                   placeholder="[[_placeholder]]" 
-                  sizing="cover" 
-                  src="[[_src]]"
-                  on-lazy-image-loaded-changed="__loadedChanged">
+                  sizing="contain" 
+                  src="[[_src]]">
       </lazy-image>
 
     </pinch-to-zoom>
