--- a/editors/file-editor.html
+++ b/editors/file-editor.html
@@ -62,6 +62,7 @@
               controls="[[_controls]]"
               hidden="[[!_isVid]]" 
               placeholder="[[_vidPlaceholder]]"
+              poster="[[_vidPoster]]"
               slot="header-background-slot"
               src="[[_vidSrc]]">
   </lazy-video>
