--- a/shared/file-thumbnail.html
+++ b/shared/file-thumbnail.html
@@ -54,6 +54,7 @@
               aspect-ratio="[[aspectRatio]]"
               controls="[[controls]]"
               placeholder="[[_vidPlaceholder]]"
+              poster="[[_vidPoster]]"
               presentation="[[presentation]]"
               src="[[_vidSrc]]">
   </lazy-video>
