This update includes several small quality-of-life improvements. Now hiding image edit icon button in photo-carousel for video items as editing video posters will need to be for a later version. Added watermark icons for image and video thumbnail items. Added a pinch-to-zoom hint animated icon to photo-viewer. Updated deps.

--- a/carousel/photo-carousel.html
+++ b/carousel/photo-carousel.html
@@ -140,6 +140,7 @@
 
     <paper-icon-button class="toolbar-buttons"
                        disabled="[[_editBtnDisabled]]"
+                       hidden="[[_hideEditBtn]]"
                        icon="file-icons:tune"
                        on-click="__editBtnClicked">
     </paper-icon-button>
