--- a/viewer/photo-viewer.html
+++ b/viewer/photo-viewer.html
@@ -36,6 +36,49 @@
     color:    var(--constant-light-text);
   }
 
+  iron-icon {
+    position: absolute;
+    bottom:   64px;
+    height:   48px;
+    width:    48px;
+    opacity:  0.7;
+  }
+
+  .hint {
+    animation-name: hint;
+    animation-duration: 2s;
+    animation-timing-function: var(--custom-ease);
+  }
+
+  @keyframes hint {
+
+    0% {
+      transform: scale(1, 1);
+      opacity:   0.7;
+    }
+
+    25% {
+      transform: scale(1.5, 1.5);
+      opacity:   0.7;
+    }
+
+    50% {
+      transform: scale(1, 1);
+      opacity:   0.7;
+    }
+
+    75% {
+      transform: scale(0.5, 0.5);
+      opacity:   0.7;
+    }
+
+    100% {
+      transform: scale(1, 1);
+      opacity:   0;
+    }
+
+  }
+
 </style>
 
 
@@ -68,6 +111,13 @@
     <paper-icon-button icon="app-icons:arrow-back"
                        on-click="__backBtnClicked">
     </paper-icon-button>
+
+
+    <iron-icon id="hintIcon" 
+               icon="file-icons:zoom-out-map"
+               on-animationend="__resetHintIcon"
+               on-animationcancel="__resetHintIcon">
+    </iron-icon>
 
   </div>
 
