Added an error dropdown menu button to file-item and roll-item that alerts user of failures in cloud post-processing. processing-error-icon

--- a/lists/file-item.html
+++ b/lists/file-item.html
@@ -127,7 +127,10 @@
       </paper-icon-button>
     </div>
 
+    <processing-error-icon item="[[item]]"></processing-error-icon>
+
     <processing-icon item="[[item]]"></processing-icon>
+    
   </div>
 
 
