--- a/lists/processing-icon.html
+++ b/lists/processing-icon.html
@@ -30,7 +30,7 @@
     transform: translate(-50%, -50%);
 	}
 
-	.start {
+	.rotate {
 		animation-name: 					 rotate;
 		animation-duration: 			 2s;
 		animation-iteration-count: infinite;
@@ -50,4 +50,7 @@
 
 
 <iron-icon icon="app-icons:cloud"></iron-icon>
-<iron-icon id="gear" icon="app-icons:settings"></iron-icon>
+
+<iron-icon id="gear" 
+					 icon="app-icons:settings">
+</iron-icon>
