--- a/lists/roll-item.html
+++ b/lists/roll-item.html
@@ -41,6 +41,9 @@
   </file-thumbnail>
 
 
+  <processing-error-icon item="[[item]]"></processing-error-icon>
+
+
   <processing-icon item="[[item]]"></processing-icon>
 
 
