--- a/shared/file-thumbnail.html
+++ b/shared/file-thumbnail.html
@@ -35,6 +35,7 @@
     position: absolute;
     top:      8px;
     left:     8px;
+    color:    var(--constant-light-text, white);
   }
 
 </style>
