Addresses an error when deleting storage files for video items. This was caused by attempting to delete file paths that contained the original video extention instead of the jpeg extention that is givien to all poster image files extracted from a video. Removed left and right padding from camera roll items so that the grid is now fullbleed.

--- a/lists/roll-items.html
+++ b/lists/roll-items.html
@@ -16,7 +16,7 @@
       This becomes especially visible with rotated orientation images.
     */
     grid-gap: 3px; 
-    padding:  3px;
+    padding:  3px 0px;
   }
 
 </style>
