--- a/carousel/photo-carousel.html
+++ b/carousel/photo-carousel.html
@@ -6,8 +6,8 @@
     position: fixed;
     top:      0px;
     right:    0px;
-    bottom:   0px;
     left:     0px;
+    height:   100vh;
     background-color: black;
   }
   
@@ -16,10 +16,6 @@
     opacity:    0;
     transition: opacity 0.6s;
     z-index:    1;
-  }
-
-  #flip {
-    z-index: 1;
   }
 
   #overlay {
