The photo-viewer can now be opened from the file-editor. Now stopping the photo-carousel while image-editor is open. This helps reduce dom elements as well as address an issue with lazy loading all elements when the carousel was re-displayed after the editor was closed. Updated app-carousel dep.

--- a/editors/image-editor.html
+++ b/editors/image-editor.html
@@ -11,7 +11,8 @@
 <app-header-overlay id="overlay"
                     header-size="1"
                     prebuilt-animation="from-right"
-                    title="Image Editor">
+                    title="Image Editor"
+                    on-overlay-reset="__reset">
 
   <div slot="content">
 
