Pulled common editor logic into an editor-mixin file. Renamed metadata-editor to metadata-page since it is not a standalone overlay but rather a sub component that is now used in image-editor as a tab page. Updated all overlays that have a blur backdrop-filter header effect to the new app-header-overlay api. Updated deps.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -69,6 +69,7 @@
 
 
 <image-editor id="imageEditor"
+              dark-mode="[[darkMode]]"
               item="[[_liveItem]]"
               list="[[list]]">
 </image-editor>
