--- a/carousel/photo-carousel.html
+++ b/carousel/photo-carousel.html
@@ -27,25 +27,11 @@
     margin-bottom: 128px;
 
     box-shadow: none;
-    --overlay-background-color:                   transparent;
+    --overlay-background-color:                   transparent;    
+    --overlay-toolbar-backdrop-filter:            blur(10px);
     --overlay-toolbar-background-parallax-height: 100%;
     --overlay-toolbar-background-color:           transparent;
     --overlay-toolbar-vignette-opacity:           0;
-  }
-
-  .header-background {
-    position:       absolute;
-    top:            0px;
-    right:          0px;
-    bottom:         0px;
-    left:           0px;
-    pointer-events: none;
-    z-index:       -1;
-  }
-
-  .blur {
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter:         blur(10px);
   }
 
   /*
@@ -53,6 +39,13 @@
     a backdrop-filter on same element.
   */
   #header-color-background {
+    position:         absolute;
+    top:              0px;
+    right:            0px;
+    bottom:           0px;
+    left:             0px;
+    pointer-events:   none;
+    z-index:         -1;
     opacity:          0.7;
     background-color: var(--app-primary-color);
   }
@@ -117,12 +110,8 @@
                     top-title
                     on-overlay-reset="__reset">
 
-  <div class="header-background blur" 
-       slot="header-background-slot">
-  </div>
 
   <div id="header-color-background"
-       class="header-background" 
        slot="header-background-slot">
   </div>
 
